# scratch_drm

./: .gitignore  CMakeLists.txt  README.md  add_hash.sh  bougus_math.cpp  bougus_math.h  build.sh  drm.cpp  drm.h  main.cpp  plan  scratch_drm  so_assoc.h  var_defs.h
build_resources/: add_hash.sh  add_so.sh  build.sh
drm/: drm.cpp  drm.h  var_defs.h
